# 2dRaytracer

./: .gitignore  CMakeLists.txt  Circle.hpp  Collision.hpp  Linalg.hpp  Mirror.hpp  README.md  Ray.hpp  Shape.hpp  Triangle.hpp  helpers.hpp  main.cpp
UnitTest/: UnitTest.cpp
include/: Linalg.hpp  Vector2d.hpp  helpers.hpp  timer.hpp  wavelength_rgb.hpp
include/mathLib/: Vector2.cpp
src/: Circle.hpp  Collision.hpp  Ray.hpp  RayProcessor.hpp  RayRenderer.hpp  Shape.hpp  Surface.hpp  Triangle.hpp  helpers.hpp  main.cpp
src/Lights/: Directional.hpp  Light.hpp  PointLight.hpp
src/Shapes/: Circle.hpp  Line.hpp  Shape.hpp  Surface.hpp  Triangle.hpp
